# flakes

./: flake.nix
cabal/: flake.nix  project.cabal
haskell-benchmark/: project.cabal
haskell-github/: flake.nix  project.cabal
haskell-github/.github/workflows/: nix.yml  release.yml
haskell-github/app/: Main.hs
haskell-github/src/: Project.hs
haskell-github/test/: Main.hs
