cabal-version:      2.4
name:               project
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Kevin Mullins
maintainer:         kevin@pnotequalnp.com
copyright:          Kevin Mullins 2021

executable project
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:    base ^>=4.14.1.0
